# quadruped

./: MAKE_A_BETTER_MAKEFILE_IN_SRC  README.md  README_old_moco.md  TODOS.txt  spotmicroREADME.txt
.quadruped_old/: README.md  TODOS.txt
.quadruped_old/qt/srv/test/src/: RPM_test.cpp
.quadruped_old/test_src/: .#simple_servo_test.py  maestro.py
.quadruped_old/test_src/c_cpp_tests/_build_/: CMakeCache.txt  cmake_install.cmake
cocoa2_config/: CMakeLists.txt  README.md  config.json  package.xml
cocoa2_config/launch/: bringup.launch  gazebo.launch  navigate.launch  slam.launch  spawn_robot.launch
cocoa2_config/launch/include/: move_base.launch
cocoa_config/: CMakeLists.txt  package.xml
cocoa_config/config/: spot_micro_motion_cmd.yaml
cocoa_config/include/: quadruped_description.h  quadruped_description.h_new_measurements  quadruped_description.h_old_auto_gen
cocoa_config/include/spot_micro_motion_cmd/: spot_micro_motion_cmd.h
cocoa_config/launch/: bringup.launch  motion_cmd.launch
cocoa_config/src/: .#motion_cmd.cpp
cocoa_config/src/smfsm_d/: spot_micro_walk.cpp
cocoa_config/src_old/: motion_cmd.cpp  motion_cmd_node.cpp
imu_mpu6050/: CMakeLists.txt  package.xml
imu_mpu6050/launch/: i2c_pwm_imu.launch  imu_node.launch
imu_mpu6050/src/: imu_mpu6050.cpp  imu_mpu6050_node.cpp
maestro-linux/: README.txt  maestro_settings.txt
main/: README.md
main/STLs/quadruped_STL/prints/: main_body_minus_abdominal_supports_battery_leg_parts.rizejob  test_leg_rev1_1.5_scale_handles_abdominal_supports.rizejob  test_leg_rev1_1.5_scale_plus_handles_battery_abdominal_supports.rizejob
main/STLs/quadruped_STL/revise/: 4_side_swing_motor_fixings_revised.stl  README.md  README.md.txt
main/srvo_tst/src/: main.cpp
moco_tut_dir_old_reference/tut5_gait_ctrl_algo/py_robot/: IK_simulation_example.py
node_sub_pub_tester/: CMakeLists.txt  package.xml
node_sub_pub_tester/src/: node_sub_pub_tester.cpp
qt/: Makefile  NOTES.txt
qt/src/test/: RPM_test.cpp
qt/src/test/src/: RPM_test.cpp
spot_2/src/mb.egg-info/: SOURCES.txt
src/: Makefile  RPM_test.cpp  open_loop_mv.cpp
test_src/: maestro.py  servos_mv.cpp  simple_servo_test.py  test.py  umaestro.py
test_src/c_cpp_tests/: CMakeLists.txt  Makefile  RPM_test.cpp
test_src/c_cpp_tests/_build_/: Makefile
test_src/c_cpp_tests/lib_RPM/: CMakeLists.txt
